--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "useAccessibleBlockLink",
+  "version": "0.0.0",
+  "description": "A reusable react hook that preserves a components semantic accessibility to create a visual block link.",
+  "main": "index.ts",
+  "author": "Scott Kaye <scottykaye.web@gmail.com>",
+  "repository": "https://github.com/scottykaye/useAccessibleBlockLink",
+  "keywords": [
+    "accessible",
+    "block link"
+  ],
   "devDependencies": {
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.8",
@@ -14,7 +24,7 @@
     "jsdom": "^18.0.0"
   },
   "peerDependencies": {
-    "react": "^17.0.2"
+    "react": "^16 || ^17"
   },
   "scripts": {
     "test": "jest"
