--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "@testing-library/react": "^12.1.2",
     "eslint": "^8.0.1",
     "jest": "^27.2.5",
+    "jsdom": "^18.0.0",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "jsdom": "^18.0.0"
+    "typescript": "^4.5.3"
   },
   "peerDependencies": {
     "react": "^16 || ^17"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "typeCheck": "tsc --project tsconfig.json --noEmit --allowJs false"
   }
 }
