--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.0.3",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router": "^5.1.17",
     "eslint": "^8.0.1",
     "jest": "^27.2.5",
     "jsdom": "^18.0.0",
