--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-test-renderer": "^17.0.2",
     "typescript": "^4.5.3"
   },
   "peerDependencies": {
