--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "useAccessibleBlockLink",
   "version": "0.0.0",
-  "description": "A reusable react hook that preserves a components semantic accessibility to create a visual block link.",
+  "description": "A reusable react hook that preserves a components semantics to deliver visual blocks link user interfaces. Handles containing multiple buttons or anchor links.",
   "main": "index.ts",
   "author": "Scott Kaye <scottykaye.web@gmail.com>",
   "repository": "https://github.com/scottykaye/useAccessibleBlockLink",
   "keywords": [
     "accessible",
-    "block link"
+    "block link",
+    "react",
+    "react hook"
   ],
   "devDependencies": {
     "@babel/cli": "^7.15.7",
@@ -18,14 +20,12 @@
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.3",
     "@types/react-dom": "^17.0.11",
-    "@types/react-router": "^5.1.17",
     "eslint": "^8.0.1",
     "jest": "^27.2.5",
     "jsdom": "^18.0.0",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-test-renderer": "^17.0.2",
     "typescript": "^4.5.3"
   },
   "peerDependencies": {
