--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "use-accessible-block-link",
+  "name": "use-accessible-blockink",
   "version": "1.0.0",
   "description": "A reusable react hook that preserves a components semantics to deliver visual blocks link user interfaces. Handles containing multiple buttons or anchor links.",
   "main": "index.ts",
@@ -36,6 +36,6 @@
     "typeCheck": "tsc --project tsconfig.json --noEmit --allowJs false"
   },
   "publishConfig": {
-    "registry": "https://registry.yarnpkg.com"
+    "registry": "https://registry.npmjs.org"
   }
 }
