--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "author": "Scott Kaye",
-  "repository": "https://github.com/scottykaye/useAccessibleBlockLink",
+  "repository": "https://github.com/wayfair-incubator/useAccessibleBlockLink",
+  "license": "MIT",
   "keywords": [
     "accessible",
     "block link",
@@ -14,13 +15,14 @@
   ],
   "devDependencies": {
     "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.8",
+    "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.3",
     "@types/react-dom": "^17.0.11",
+    "babel-jest": "^27.4.6",
     "eslint": "^8.0.1",
     "jest": "^27.2.5",
     "jsdom": "^18.0.0",
