--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-accessible-block-link",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "description": "A reusable react hook that preserves a components semantics to deliver visual blocks link user interfaces. Handles containing multiple buttons or anchor links.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -14,29 +14,28 @@
     "react hook"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.16.7",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.15.0",
-    "@testing-library/react": "^12.1.2",
-    "@types/jest": "^27.0.3",
-    "@types/react-dom": "^17.0.11",
-    "babel-jest": "^27.4.6",
-    "eslint": "^8.0.1",
-    "jest": "^27.2.5",
-    "jsdom": "^18.0.0",
-    "prettier": "^2.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typescript": "^4.5.3"
-  },
-  "peerDependencies": {
-    "react": "^16 || ^17"
+    "@babel/cli": "7.15.7",
+    "@babel/core": "7.23.6",
+    "@babel/preset-env": "7.23.6",
+    "@babel/preset-react": "7.23.3",
+    "@babel/preset-typescript": "7.23.3",
+    "@testing-library/react": "14.1.2",
+    "@types/jest": "27.0.3",
+    "@types/react-dom": "17.0.11",
+    "babel-jest": "29.7.0",
+    "eslint": "8.56.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "23.0.1",
+    "prettier": "3.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "5.3.3"
   },
   "scripts": {
     "test": "jest",
-    "typeCheck": "tsc --project tsconfig.json --noEmit --allowJs false",
+    "type-check": "tsc --project tsconfig.json --noEmit --allowJs false",
     "build": "babel src/ --out-dir ./dist --extensions '.ts,.tsx' && tsc --project tsconfig.json --outDir ./dist --allowJs false"
-  }
+  },
+  "packageManager": "yarn@4.0.2"
 }
