--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,9 @@
     "allowSyntheticDefaultImports": true,
     "jsx": "react",
     "outDir": "./dist",
-    "declaration": true,
-    "emitDeclarationOnly": true
+    "declaration": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.tsx"]
 }
+
